--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:name=".UserDetailAcitivity"
             android:label="@string/title_activity_user_detail_acitivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".BedListAcitivity"></activity>
+        <activity android:name=".BedListAcitivity" />
+        <activity android:name=".UserAddActivity"></activity>
     </application>
 
 </manifest>
