--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:hardwareAccelerated="true"
         android:allowBackup="true"
-        android:icon="@mipmap/logo"
+        android:icon="@mipmap/icon_logo_"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
