--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!--声明SD卡中创建与删除文件权限 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:hardwareAccelerated="true"
         android:allowBackup="true"
@@ -29,6 +30,7 @@
         <activity android:name=".BedListAcitivity" />
         <activity android:name=".UserAddActivity"/>
         <activity android:name=".TakePhotoActivity"/>
+        <activity android:name=".widget.ChoosePhoto"/>
     </application>
 
 </manifest>
