--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.huashukang.picgrab">
-    <!--声明写入SD卡权限 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <!--声明SD卡中创建与删除文件权限 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- 声明写入SD卡权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 声明SD卡中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:hardwareAccelerated="true"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/icon_logo_red"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.LoginActivity">
-
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
-
         </activity>
         <activity android:name=".activity.UserListActivity" />
         <activity android:name=".activity.UserDetailAcitivity" />
         <activity android:name=".activity.BedListAcitivity" />
-        <activity android:name=".activity.UserAddActivity"/>
-        <activity android:name=".activity.TakePhotoActivity"/>
-        <activity android:name=".activity.ChoosePhoto"/>
+        <activity android:name=".activity.UserAddActivity" />
+        <activity android:name=".activity.TakePhotoActivity" />
+        <activity android:name=".activity.ChoosePhoto" />
+        <activity android:name=".activity.SettingActivity"></activity>
     </application>
 
 </manifest>
