--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Mon Feb 01 09:53:44 CST 2016
-#systemProp.http.proxyHost=localhost
-#systemProp.http.proxyPort=8580
+#Wed Mar 16 11:37:41 CST 2016
+systemProp.http.proxyHost=localhost
+systemProp.http.proxyPort=8787
